--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet">
   <link rel="icon" type="image/svg+xml" href="ULFGLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>ULFG</title>
 </head>
 
 <body>
